# Changes log for App-Maisha
============================

0.18    2012-10-14
        - set permissions on secret files (thanks to Colin Newell).

0.17    2012-10-14
        - POD updates ... never liked how POD forces double newlines for
          bullet-point lists. (thanks to Mario Domgoergen).

0.16    2012-10-14
        - spelling fix. (thanks to Florian Schlichting & Gregor Herrmann).
        - added =encoding to POD.
        - reworked Makefile.PL for clarity.
        - License updated to Artistic License v2.0.
        - added minimum perl version (5.006).
        - META tests no longer require specific versions.
        - change file dates changed to meet W3CDTF standards.
        - implemented Perl::Critic suggestions.
        - added login and connection protection.
        - added debug feature for more verbose error messages.
        - added command history storage functionality.
        - fixed repeated network lines with help command.
        - added initial lines to help messages.
        - always use internal pager (RT#61433).
        - extend time/date formats.
        - added regular command protection.
        - updated Net::Twitter API commands.
        - Now requires Net-Twitter-3.18003.
        - updated tests.

0.15    2010-09-26
        - added OAuth support to Identica access.
        - added better protection for failing commands.
        - removed password from example settings.
        - updated tests.
        - Now requires Net-Twitter-3.13009.

0.14    2010-09-11
        - documentation fix for INI format example (thanks to Alan Haggai Alavi).
        - rewrite to Twitter.pm to use OAuth mechanism for logging in.
        - interface to plugins changed, now passes a config hash.
        - config hash now saves the home directory.
        - added META.json file and associated test.

0.13    2009-08-20
        - fixed requests with limits larger than 20.
        - suppressing 'command ok' messages.