@@ -3,6 +3,7 @@
 
 0.18    2012-10-14
         - set permissions on secret files (thanks to Colin Newell).
+        - added Search API.
 
 0.17    2012-10-14
         - POD updates ... never liked how POD forces double newlines for
